--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
+    "rc-slider": "^10.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.11",
     "tailwindcss": "3.3.2"
   }
 }
